Поправил ошибки для гитхаба

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             </div>
         </div>
 
-        <label class="input-container">
+        <!-- <label class="input-container">
             <input type="text" value="#e2badb">
             <button class="button button--add">+</button>
-        </label>
+        </label> -->
     </main>
 
     <footer>
-        <link rel="stylesheet" href="./style.scss">
+        <link rel="stylesheet" href="./dist/style.97fcb138.css">
         <script src="./index.js"></script>
     </footer>
 </body>
